--- a/DICE_Game/index.html
+++ b/DICE_Game/index.html
@@ -14,15 +14,15 @@
     </div>
     <div id="outer">
         <div id="container">
-            <div class="child" id="c1">1</div>
-            <div class="child" id="c2">2</div>
-            <div class="child" id="c3">3</div>
-            <div class="child" id="c4">4</div>
-            <div class="child" id="c5">5</div>
-            <div class="child" id="c6">6</div>
-            <div class="child" id="c7">7</div>
-            <div class="child" id="c8">8</div>
-            <div class="child" id="c9">9</div>
+            <div class="child" id="c1"></div>
+            <div class="child" id="c2"></div>
+            <div class="child" id="c3"></div>
+            <div class="child" id="c4"></div>
+            <div class="child" id="c5"></div>
+            <div class="child" id="c6"></div>
+            <div class="child" id="c7"></div>
+            <div class="child" id="c8"></div>
+            <div class="child" id="c9"></div>
         </div>
     </div>
 </body>
